src/test/deca/syntax/invalid/test_dir/added/parser/brackets_one_forgotten.deca
// Description:
//    test of one bracket forgotten
//
// Results:
//    test_pars --> error line 12
//
// History:
//    created on 04/01/2022

{
print();
